[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtutils"
version = "1.3.0"
authors = [
    {name = "Asim Shrestha", email = "asim.shrestha@hotmail.com"}
]
description = "A minimal Python library to facilitate the creation and manipulation of DICOM RTStructs."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["RTStruct", "Dicom", "Pydicom"]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

dependencies = [
    "pydicom",
    "numpy",
    "opencv-python>=4.0.0",
    "dataclasses",
]

[project.urls]
Homepage = "https://github.com/qurit/rtutils"
Repository = "https://github.com/qurit/rt-utils"
Issues = "https://github.com/qurit/rt-utils/issues"

[tool.setuptools]
package-dir = {"" = "rt_utils"}

[tool.setuptools.packages.find]
where = ["rt_utils"]
exclude = ["tests"]